# UnifiedIQ

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  ConversationalBI.md  Dashboard.md  Makefile  README.md  docker-compose.yml  memory_strategy.md
src/UnifiedIQ-api/: .env.example  Dockerfile  README.md  app.yaml  pyproject.toml  pytest.ini  requirements.txt
src/UnifiedIQ-api/app/: config.py  deps.py  errors.py  main.py  observability.py  sse.py
src/UnifiedIQ-api/app/integrations/: base.py  email_smtp.py  in_app.py  slack.py
src/UnifiedIQ-api/app/models/: domain.py  requests.py  responses.py
src/UnifiedIQ-api/app/prompts/: alert_system.py  chat_system.py  judge_system.py  verifier_system.py
src/UnifiedIQ-api/app/routers/: alerts.py  canvases.py  chat.py  health.py  integrations.py  memory.py  verify.py  views.py
src/UnifiedIQ-api/app/services/: alerts.py  auth.py  cache.py  canvases.py  llm.py  schema.py  (+7 more)
src/UnifiedIQ-api/eval/: golden_test_set.json  report_template.py  run_eval.py
src/UnifiedIQ-api/static/: 404.html  index.html  index.txt
src/UnifiedIQ-api/tests/: conftest.py  test_eval.py  test_routers_alerts.py  test_routers_canvases.py  test_routers_chat.py  test_routers_chat_stream.py  test_routers_health.py  test_routers_integrations.py  test_routers_memory.py  test_routers_verify.py  test_routers_views.py  test_services_alerts.py  test_services_auth.py  test_services_cache.py  test_services_canvases.py  test_services_llm.py  test_services_schema.py  test_services_session_store.py  test_services_verifier.py
(+85 files in other folders)
