[project]
name = "unifiediq-api"
version = "0.1.0"
description = "UnifiedIQ API - governed conversational analytics over enterprise data"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "openai>=1.54",
  "instructor>=1.6",
  "sqlglot>=25.0",
  "cachetools>=5.5",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.9",
  "databricks-sql-connector>=3.4",
  "databricks-vectorsearch>=0.40",
  "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "eval", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are call-in-default by design.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Header",
  "fastapi.Path",
  "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
